RESOLVED FIXED308275
REGRESSION(306638@main): [iOS] Fullscreen mode cannot change caption language
https://bugs.webkit.org/show_bug.cgi?id=308275
Summary REGRESSION(306638@main): [iOS] Fullscreen mode cannot change caption language
Jer Noble
Reported 2026-02-20 00:34:32 PST
[iOS] Fullscreen mode cannot change caption language
Attachments
Jer Noble
Comment 1 2026-02-20 00:34:33 PST
Jer Noble
Comment 2 2026-02-20 00:39:09 PST
EWS
Comment 3 2026-02-20 15:22:36 PST
Committed 307947@main (e27392506a42): <https://commits.webkit.org/307947@main> Reviewed commits have been landed. Closing PR #59069 and removing active labels.
EWS
Comment 4 2026-02-23 11:17:15 PST
Committed 305413.337@safari-7624-branch (bb5ef3229293): <https://commits.webkit.org/305413.337@safari-7624-branch> Reviewed commits have been landed. Closing PR #4536 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.